--- a/src/main/resources/templates/adminDashboard/index.html
+++ b/src/main/resources/templates/adminDashboard/index.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Admin - Dashboard</title>
-
-    <!-- Custom fonts for this template-->
-    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-            rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
-
-
-</head>
+<div th:insert="adminDashboard/fragments/header :: header"></div>
 
 <body id="page-top">
 
@@ -29,7 +9,7 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <div th:insert="adminDashboard/common/sidebar :: sidebar"></div>
+    <div th:insert="adminDashboard/fragments/sidebar :: sidebar"></div>
     <!-- End of Sidebar -->
 
     <!-- Content Wrapper -->
@@ -39,7 +19,7 @@
         <div id="content">
 
             <!-- Topbar -->
-            <div th:insert="adminDashboard/common/topbar :: topbar"></div>
+            <div th:insert="adminDashboard/fragments/topbar :: topbar"></div>
             <!-- End of Topbar -->
 
             <!-- Begin Page Content -->
@@ -380,13 +360,7 @@
         <!-- End of Main Content -->
 
         <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2025</span>
-                </div>
-            </div>
-        </footer>
+        <div th:insert="adminDashboard/fragments/footer :: footer"></div>
         <!-- End of Footer -->
 
     </div>
