--- a/src/main/resources/templates/adminDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/adminDashboard/fragments/sidebar.html
@@ -37,7 +37,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Custom Customer:</h6>
-                    <a class="collapse-item" th:href="@{admin/account}">Accounts</a>
+                    <a class="collapse-item" th:href="@{/admin/account}">Accounts</a>
                 </div>
             </div>
         </li>
@@ -55,7 +55,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Custom Course:</h6>
                     <a class="collapse-item" href="utilities-color.html">Course</a>
-                    <a class="collapse-item" href="utilities-border.html">Orders & Payments</a>
+                    <a class="collapse-item" th:href="@{/admin/payments}">Orders & Payments</a>
                     <a class="collapse-item" href="utilities-animation.html">Analytics & Reports</a>
                     <a class="collapse-item" href="utilities-other.html">Review & FeedBack</a>
                     <a class="collapse-item" href="utilities-other.html">Quiz</a>
