--- a/src/main/resources/templates/adminDashboard/fragments/header.html
+++ b/src/main/resources/templates/adminDashboard/fragments/header.html
@@ -1,5 +1,4 @@
-<div th:fragment="header">
-    <head>
+    <head th:fragment="header">
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,4 +18,3 @@
         <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
 
     </head>
-</div>
