--- a/src/main/resources/templates/adminDashboard/fragments/topbar.html
+++ b/src/main/resources/templates/adminDashboard/fragments/topbar.html
@@ -1,6 +1,4 @@
-
-<div th:fragment="topbar">
-    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+        <nav th:fragment="topbar" class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
         <!-- Sidebar Toggle (Topbar) -->
         <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -202,4 +200,3 @@
 
     </nav>
 
-</div>
