--- a/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructor}">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructor/}">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-chalkboard-teacher"></i>
             </div>
@@ -14,7 +14,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" th:href="@{/instructor}">
+            <a class="nav-link" th:href="@{/instructor/}">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
         </li>
@@ -36,24 +36,24 @@
 
         <!-- Nav Item - Lessons -->
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/instructor/lessons}">
+            <a class="nav-link" th:href="@{/instructor/list}">
                 <i class="fas fa-fw fa-video"></i>
                 <span>Lessons</span></a>
         </li>
 
-        <!-- Nav Item - Quiz -->
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/instructor/quizzes}">
-                <i class="fas fa-fw fa-question-circle"></i>
-                <span>Quizzes</span></a>
-        </li>
+<!--        &lt;!&ndash; Nav Item - Quiz &ndash;&gt;-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link" th:href="@{/instructor/quizzes}">-->
+<!--                <i class="fas fa-fw fa-question-circle"></i>-->
+<!--                <span>Quizzes</span></a>-->
+<!--        </li>-->
 
-        <!-- Nav Item - Feedback -->
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/instructor/feedback}">
-                <i class="fas fa-fw fa-comments"></i>
-                <span>Feedback</span></a>
-        </li>
+<!--        &lt;!&ndash; Nav Item - Feedback &ndash;&gt;-->
+<!--        <li class="nav-item">-->
+<!--            <a class="nav-link" th:href="@{/instructor/feedback}">-->
+<!--                <i class="fas fa-fw fa-comments"></i>-->
+<!--                <span>Feedback</span></a>-->
+<!--        </li>-->
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
