--- a/src/main/resources/templates/instructorDashboard/index.html
+++ b/src/main/resources/templates/instructorDashboard/index.html
@@ -2,28 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <!-- HEADER -->
-<div th:insert="instructorDashboard/fragments/header :: header"></div>
+<div th:replace="instructorDashboard/fragments/header :: header"></div>
 
 <body id="page-top">
-
-<!-- Page Wrapper -->
 <div id="wrapper">
-
   <!-- Sidebar -->
-  <div th:insert="instructorDashboard/fragments/sidebar :: sidebar"></div>
+  <div th:replace="instructorDashboard/fragments/sidebar :: sidebar"></div>
 
   <!-- Content Wrapper -->
   <div id="content-wrapper" class="d-flex flex-column">
-
     <!-- Main Content -->
     <div id="content">
-
       <!-- Topbar -->
-      <div th:insert="instructorDashboard/fragments/topbar :: topbar"></div>
+      <div th:replace="instructorDashboard/fragments/topbar :: topbar"></div>
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
-
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
           <h1 class="h3 mb-0 text-gray-800">Instructor Dashboard</h1>
@@ -32,11 +26,9 @@
           </a>
         </div>
 
-        <!-- Dashboard cards + charts here -->
-        <!-- You can keep original admin cards/charts or customize for instructors -->
-
+        <!-- Content Row -->
         <div class="row">
-          <!-- Example Card -->
+          <!-- Total Courses Card -->
           <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
               <div class="card-body">
@@ -45,7 +37,7 @@
                     <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                       Total Courses
                     </div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">8</div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalCourses}">0</div>
                   </div>
                   <div class="col-auto">
                     <i class="fas fa-book fa-2x text-gray-300"></i>
@@ -55,33 +47,113 @@
             </div>
           </div>
 
-          <!-- Add more cards here -->
+          <!-- Total Lessons Card -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-success shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                      Total Lessons
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalLessons}">0</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fas fa-file-alt fa-2x text-gray-300"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Students Enrolled Card -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-info shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                      Students Enrolled
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalStudents}">0</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fas fa-users fa-2x text-gray-300"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Reviews Received Card -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-warning shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                      Reviews Received
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalReviews}">0</div>
+                  </div>
+                  <div class="col-auto">
+                    <i class="fas fa-star fa-2x text-gray-300"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
+        <!-- Charts (optional, placeholder only) -->
+        <div class="row">
+          <div class="col-xl-8 col-lg-7">
+            <div class="card shadow mb-4">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
+              </div>
+              <div class="card-body">
+                <div class="chart-area">
+                  <canvas id="myAreaChart"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="card shadow mb-4">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Course Distribution</h6>
+              </div>
+              <div class="card-body">
+                <div class="chart-pie pt-4 pb-2">
+                  <canvas id="myPieChart"></canvas>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- End container-fluid -->
-
+      <!-- End of Page Content -->
     </div>
     <!-- End of Main Content -->
 
     <!-- Footer -->
     <div th:insert="instructorDashboard/fragments/footer :: footer"></div>
   </div>
-
 </div>
-<!-- End of Wrapper -->
 
+<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
   <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal -->
+<!-- Logout Modal-->
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
       <div class="modal-footer">
