--- a/src/main/resources/templates/adminDashboard/fragments/category.html
+++ b/src/main/resources/templates/adminDashboard/fragments/category.html
@@ -1,45 +1,44 @@
 <div class="container-fluid" id="loadCategory" th:fragment="categoryList">
-    <!-- Thay đổi từ container-xl sang container-fluid -->
     <div class="table-responsive">
         <div class="table-wrapper">
             <div class="table-title">
-
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-4">
                         <h2>Management <b>Category</b></h2>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="search-box">
-                            <i class="material-icons">&#xE8B6;</i>
-                            <input type="text" id="searchInput" class="form-control" placeholder="Search&hellip;">
+
+                    <!-- AJAX search form -->
+                    <form id="filterForm" class="form-inline col-sm-6">
+                        <div class="col-sm-4">
+                            <div class="search-box">
+                                <i class="material-icons">&#xE8B6;</i>
+                                <input type="text" name="name" id="searchInput" class="form-control"
+                                    placeholder="Search&hellip;">
+                            </div>
                         </div>
+                        <div class="col-sm-2">
+                            <select class="form-control" name="select" id="sortSelect">
+                                <option value="">Sort</option>
+                                <option value="1">A to Z</option>
+                                <option value="2">Z to A</option>
+                            </select>
+                        </div>
+                    </form>
+
+                    <div class="col-sm-2 text-right">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryModal">
+                            Add Category
+                        </button>
                     </div>
                 </div>
-                <div class="col-sm-2">
-                    <select id="sortSelect" class="form-control">
-                        <option value="">Sort</option>
-                        <option value="asc">A → Z</option>
-                        <option value="desc">Z → A</option>
-                    </select>
-                </div>
-                <div class="col-sm-4 text-right">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryModal">
-                        Add Category
-                    </button>
-                </div>
-
-
-
-
             </div>
 
-
-            <table class="table table-striped table-hover table-bordered">
+            <!-- Table categories -->
+            <table class="table table-striped table-hover table-bordered" id="categoryTable" th:fragment="categoryTable">
                 <thead>
                     <tr>
                         <th>ID <i class="fa fa-sort"></i></th>
                         <th>Name</th>
-
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -56,10 +55,10 @@
                                 data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                         </td>
                     </tr>
-
-
                 </tbody>
             </table>
+
+            <!-- Pagination static (có thể chuyển sang dynamic sau) -->
             <div class="clearfix">
                 <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
                 <ul class="pagination">
@@ -76,6 +75,7 @@
         </div>
     </div>
 
+    <!-- Modal Add -->
     <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -101,5 +101,4 @@
             </form>
         </div>
     </div>
-
 </div>
