validate can create with BuyPackages

--- a/src/main/resources/templates/instructorDashboard/course.html
+++ b/src/main/resources/templates/instructorDashboard/course.html
@@ -37,6 +37,8 @@
 
                 <!-- Course List Table -->
 
+                <div th:utext="${canCreate}" style="color: red;">
+                </div>
 
 
 
