feature delete category

--- a/src/main/resources/templates/adminDashboard/fragments/category.html
+++ b/src/main/resources/templates/adminDashboard/fragments/category.html
@@ -51,7 +51,7 @@
                                     class="material-icons">&#xE417;</i></a>
                             <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i
                                     class="material-icons">&#xE254;</i></a>
-                            <a href="#" class="delete" th:data-id="${category.id}" id="deleteCategory" title="Delete"
+                            <a href="#" class="delete delete-category" th:data-id="${category.id}"  title="Delete"
                                 data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                         </td>
                     </tr>
