--- a/src/main/resources/templates/adminDashboard/index.html
+++ b/src/main/resources/templates/adminDashboard/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <div th:insert="adminDashboard/fragments/header :: header"></div>
 
@@ -42,7 +42,7 @@
 
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
+    <i class="fas fa-angle-up" ></i>
 </a>
 
 <!-- Logout Modal-->
