--- a/src/main/resources/templates/adminDashboard/fragments/courseContent.html
+++ b/src/main/resources/templates/adminDashboard/fragments/courseContent.html
@@ -80,18 +80,18 @@
                         </span>
                     </td>
                     <td>
-                        <a th:href="@{/admin/course/detail/{courseId}(courseId=${course.courseId})}"
-                           class="btn btn-info btn-sm" title="View Detail">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        <!--            <a th:href="@{'/updateAccount'(userId=${u.userId})}" class="btn btn-success" title="Edit">-->
-                        <!--              <i class="fas fa-edit"></i>-->
-                        <!--            </a>-->
-                        <a th:href="@{/admin/course/delete/{courseId}(courseId=${course.courseId})}"
-                           class="btn btn-danger"
-                           onclick="return confirm('Bạn có chắc chắn muốn xóa khóa học này không?')" title="Delete">
-                            <i class="fas fa-trash"></i>
-                        </a>
+                        <div class="d-flex justify-content-center gap-2 w-100">
+                            <a th:href="@{/admin/course/detail/{courseId}(courseId=${course.courseId})}"
+                               class="btn btn-info btn-sm w-100" title="View Detail">
+                                <i class="fas fa-eye"></i>
+                            </a>
+
+                            <a th:href="@{/admin/course/delete/{courseId}(courseId=${course.courseId})}"
+                               class="btn btn-danger btn-sm w-100"
+                               onclick="return confirm('Bạn có chắc chắn muốn xóa khóa học này không?')" title="Delete">
+                                <i class="fas fa-trash"></i>
+                            </a>
+                        </div>
                     </td>
                 </tr>
                 </tbody>
