authorize role to login

--- a/src/main/resources/templates/loginPage/login.html
+++ b/src/main/resources/templates/loginPage/login.html
@@ -48,10 +48,10 @@
                                 <!-- Login Form  -->
                                 <form action="/perform_login" method="post" class="mb-4">
                                     <div class="mb-3">
-                                        <label for="username" class="form-label">Username</label>
-                                        <input type="text" class="form-control form-control-lg"
-                                               id="username" name="username"
-                                               placeholder="Enter your username" required>
+                                        <label for="email" class="form-label">Email</label>
+                                        <input type="email" class="form-control form-control-lg"
+                                               id="email" name="email"
+                                               placeholder="Enter your email" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="password" class="form-label">Password</label>
