--- a/src/main/resources/templates/loginPage/signup.html
+++ b/src/main/resources/templates/loginPage/signup.html
@@ -90,7 +90,7 @@
                 <div class="text-center">
                   <p class="text-muted">
                     Already have an account?
-                    <a th:href="@{/login}" class="text-primary fw-medium text-decoration-none">Sign In</a>
+                    <a th:href="@{/templates/loginPage}" class="text-primary fw-medium text-decoration-none">Sign In</a>
                   </p>
                 </div>
               </div>
