--- a/src/main/resources/templates/adminDashboard/orders.html
+++ b/src/main/resources/templates/adminDashboard/orders.html
@@ -25,7 +25,7 @@
             <!-- Begin Page Content -->
 
                 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                      th:action="@{/admin/payments/searchByUsername}" method="get">
+                      th:action="@{/admin/orders/searchByUsername}" method="get">
                     <div class="input-group">
                         <input type="text" class="form-control bg-light border-0 small" name="username" th:value="${username}" placeholder="Enter username"/>
                         <div class="input-group-append">
@@ -38,7 +38,7 @@
 
             <!-- Form tìm kiếm theo Status -->
                 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                      th:action="@{/admin/payments/searchByCourseName}" method="get">
+                      th:action="@{/admin/orders/searchByCourseName}" method="get">
                     <div class="input-group">
                         <input type="text" class="form-control bg-light border-0 small" name="courseName" th:value="${courseName}" placeholder="Enter course name"/>
                         <div class="input-group-append">
@@ -50,7 +50,7 @@
                 </form>
 
                 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                      th:action="@{/admin/payments/sortByAmount}" method="get">
+                      th:action="@{/admin/orders/sortByAmount}" method="get">
                     <div class="input-group">
                         <label>Sort by Amount:</label>
                         <select  name="direction" onchange="this.form.submit()">
@@ -62,7 +62,7 @@
                 </form>
 
                 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                      th:action="@{/admin/payments/sortByDate}" method="get">
+                      th:action="@{/admin/orders/sortByDate}" method="get">
                     <div class="input-group">
                         <label>Sort by Date:</label>
                         <select  name="direction" onchange="this.form.submit()">
@@ -77,29 +77,26 @@
             <table class="table table-striped table-hover table-bordered">
                 <thead>
                 <tr>
-                    <th>ID <i class="fa fa-sort"></i></th>
+                    <th>Order ID</th>
+                    <th>Amount</th>
+                    <th>Order Type</th>
+                    <th>Status</th>
+                    <th>Order Date</th>
+                    <th>Note</th>
                     <th>Username</th>
                     <th>Courses</th>
-                    <th>Amount</th>
-                    <th>Payment Type</th>
-                    <th>Status</th>
-                    <th>Payment Date</th>
-                    <th>Note</th>
-
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="payment : ${payments}">
-                    <td th:text="${payment.paymentId}"></td>
-                    <td th:text="${payment.username}"></td>
-                    <td th:text="${payment.courseNames != null &&
-                     !payment.courseNames.isEmpty()} ? ${#strings.listJoin(payment.courseNames, ', ')} : 'No courses'"></td>
-                    <td th:text="${payment.amount}"></td>
-                    <td th:text="${payment.paymentType}"></td>
-                    <td th:text="${payment.status}"></td>
-                    <td th:with="formatter=${#temporals.format(payment.paymentDate, 'dd/MM/yyyy')}" th:text="${formatter}"></td>
-                    <td th:text="${payment.note}"></td>
-
+                <tr th:each="orders : ${orders}">
+                    <td th:text="${orders.orderId} ?: 'N/A'"></td>
+                    <td th:text="${orders.amount} ?: 'N/A'"></td>
+                    <td th:text="${orders.orderType} ?: 'N/A'"></td>
+                    <td th:text="${orders.status} ?: 'N/A'"></td>
+                    <td th:with="formatter=${#temporals.format(orders.orderDate, 'dd/MM/yyyy HH:mm')}" th:text="${formatter}"></td>
+                    <td th:text="${orders.note} ?: 'N/A'"></td>
+                    <td th:text="${orders.username} ?: 'N/A'"></td>
+                    <td th:text="${orders.courseNames != null && !orders.courseNames.isEmpty()} ? ${#strings.listJoin(orders.courseNames, ', ')} : 'No courses'"></td>
                 </tr>
                 </tbody>
             </table>
