--- a/src/main/resources/templates/adminDashboard/buyPackages.html
+++ b/src/main/resources/templates/adminDashboard/buyPackages.html
@@ -23,7 +23,8 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content -->
-
+            <div class="container-fluid">
+                <div class="table-wrapper">
             <!-- Hiển thị danh sách payments -->
             <table class="table table-striped table-hover table-bordered">
                 <thead>
@@ -66,7 +67,8 @@
                 </ul>
             </div>
             <!-- /.container-fluid -->
-
+                </div>
+            </div>
         </div>
         <!-- End of Main Content -->
 
