buid feature notifi reject

--- a/src/main/resources/templates/homePage/home.html
+++ b/src/main/resources/templates/homePage/home.html
@@ -67,7 +67,7 @@
                         <button class="btn btn-outline-light rounded-pill px-4 me-2" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
                         <button class="btn btn-primary rounded-pill px-4" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
                         -->
-                        <a href="login.html">Login</a>
+                        <a th:href="@{/login}">Login</a>
                     </div>
                 </div>
             </div>
